# Agentic-AI-Demo-Document-Parser

./: Untitled-1.ipynb  pyproject.toml  tets.ipynb
Notebooks/: Document_Parser.ipynb
parsed_scripts/: ai_studio_code.txt  ai_studio_code.txt:mshield  parsed_script.json
scripts/: Shrek.pdf:Zone.Identifier
