[project]
name = "valantix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "google-genai>=1.66.0",
    "huggingface>=0.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]
